--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://app.luminpdf.com/viewer/6803c43c4d8bae301089ecd8" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/19r1rCCwDTbSrhztV-MEsWxro-PtHW2IS/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -567,7 +567,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="https://app.luminpdf.com/viewer/6803c43c4d8bae301089ecd8">Download Resume</h3>
-	            <p><a href="https://app.luminpdf.com/viewer/6803c43c4d8bae301089ecd8">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/19r1rCCwDTbSrhztV-MEsWxro-PtHW2IS/view?usp=drive_link">resumelink</a></p>
 	          </div>
           </div>
 
