--- a/index.html
+++ b/index.html
@@ -566,8 +566,8 @@
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-globe"></span>
           		</div>
-          		<h3 class="https://app.luminpdf.com/viewer/6803c43c4d8bae301089ecd8">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/19r1rCCwDTbSrhztV-MEsWxro-PtHW2IS/view?usp=drive_link">resumelink</a></p>
+          		<h3 class="https://drive.google.com/file/d/19r1rCCwDTbSrhztV-MEsWxro-PtHW2IS/view?usp=drive_link">Download Resume</h3>
+	            <p><a href="https://drive.google.com/file/d/19r1rCCwDTbSrhztV-MEsWxro-PtHW2IS/view?usp=drive_link">Resumelink</a></p>
 	          </div>
           </div>
 
